--- a/action.yml
+++ b/action.yml
@@ -36,5 +36,5 @@ runs:
       run: ls
       shell: bash
     - name: Install/Update App
-      run: ls -la && ./installOrUpdate.sh ${{ inputs.docker-image }} ${{ inputs.app-domain }} ${{ inputs.cloudron-server }} ${{ inputs.cloudron-token }} ${{ inputs.install-if-missing }}
+      run: ${{ github.action_path }}/installOrUpdate.sh ${{ inputs.docker-image }} ${{ inputs.app-domain }} ${{ inputs.cloudron-server }} ${{ inputs.cloudron-token }} ${{ inputs.install-if-missing }}
       shell: bash
