--- a/action.yml
+++ b/action.yml
@@ -19,8 +19,11 @@ inputs:
     required: true
   install-if-missing:
     description: "Should the app be installed if not currently? False results in using update only."
-    required: true
-    default: "true"
+    required: false
+    default: "false"
+  environment:
+    description: "Environment variables to be set. Note that this does not clear currently set environment variables which are not overwritten."
+    required: false
 runs:
   using: composite
   steps:
@@ -36,5 +39,5 @@ runs:
       run: ls
       shell: bash
     - name: Install/Update App
-      run: ${{ github.action_path }}/installOrUpdate.sh ${{ inputs.docker-image }} ${{ inputs.app-domain }} ${{ inputs.cloudron-server }} ${{ inputs.cloudron-token }} ${{ inputs.install-if-missing }}
+      run: ${{ github.action_path }}/installOrUpdate.sh ${{ inputs.docker-image }} ${{ inputs.app-domain }} ${{ inputs.cloudron-server }} ${{ inputs.cloudron-token }} ${{ inputs.install-if-missing }} ${{ inputs.environment }}
       shell: bash
