--- a/action.yml
+++ b/action.yml
@@ -39,5 +39,5 @@ runs:
       run: ls
       shell: bash
     - name: Install/Update App
-      run: ${{ github.action_path }}/installOrUpdate.sh ${{ inputs.docker-image }} ${{ inputs.app-domain }} ${{ inputs.cloudron-server }} ${{ inputs.cloudron-token }} ${{ inputs.install-if-missing }} ${{ inputs.environment }}
+      run: ${{ github.action_path }}/installOrUpdate.sh ${{ inputs.image }} ${{ inputs.app-domain }} ${{ inputs.cloudron-server }} ${{ inputs.cloudron-token }} ${{ inputs.install-if-missing }} ${{ inputs.environment }}
       shell: bash
