--- a/action.yml
+++ b/action.yml
@@ -40,5 +40,5 @@ runs:
       run: npm i -g cloudron
       shell: bash
     - name: Install/Update App
-      run: ${{ github.action_path }}/installOrUpdate.sh ${{ inputs.image }} ${{ inputs.app-domain }} ${{ inputs.cloudron-server }} ${{ inputs.cloudron-token }} ${{ inputs.install-if-missing }} ${{ inputs.skip-backup }} ${{ inputs.environment }}
+      run: ${{ github.action_path }}/installOrUpdate.sh "${{ inputs.image }}" "${{ inputs.app-domain }}" "${{ inputs.cloudron-server }}" "${{ inputs.cloudron-token }}" "${{ inputs.install-if-missing }}" "${{ inputs.skip-backup }}" "${{ inputs.environment }}"
       shell: bash
