Add env setting.

--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,7 @@ inputs:
     required: false
     default: "false"
   environment:
-    description: "Environment variables to be set. Note that this does not clear currently set environment variables which are not overwritten."
+    description: "Environment variables to be set in format `KEY1=Val1 KEY2=Val2`. Note that this does not clear currently set environment variables which are not overwritten."
     required: false
 runs:
   using: composite
