--- a/action.yml
+++ b/action.yml
@@ -33,10 +33,10 @@ runs:
   using: composite
   steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js 16.x
+    - name: Use Node.js 18
       uses: actions/setup-node@v3
       with:
-        node-version: 16.x
+        node-version: 18
     - name: Install Cloudron CLI
       run: npm i -g cloudron
       shell: bash
